test/corpus/docs/getting_started/containers.txt
====================|||
Containers
====================|||

apartment.Bedroom.Bathroom -> office.Spare Room.Bathroom: Portal

---|||

(source_file
  (declaration
    identifier: (identifier
      field: (identifier)
      field: (identifier))
    connection: (connection)
    identifier: (identifier
      field: (identifier)
      field: (identifier))
    label: (label)))

====================|||
Base Container Block
====================|||

gcloud: Google Cloud {
  # Block
}

---|||

(source_file
  (declaration
    identifier: (identifier)
    label: (label)
    block: (block
      (comment))))

====================|||
Container with keyword
====================|||

gcloud: {
  label: Google Cloud
}

---|||

(source_file
  (declaration
    identifier: (identifier)
    block: (block
      (declaration
        identifier: (identifier)
        label: (label)))))

====================|||
Example
====================|||

clouds: {
  aws: AWS {
    load_balancer -> api
    api -> db
  }
  gcloud: Google Cloud {
    auth -> db
  }

  gcloud -> aws
}

---|||

(source_file
  (declaration
    identifier: (identifier)
    block: (block
      (declaration
        identifier: (identifier)
        label: (label)
        block: (block
          (declaration
            identifier: (identifier)
            connection: (connection)
            identifier: (identifier))
          (declaration
            identifier: (identifier)
            connection: (connection)
            identifier: (identifier))))
      (declaration
        identifier: (identifier)
        label: (label)
        block: (block
          (declaration
            identifier: (identifier)
            connection: (connection)
            identifier: (identifier))))
      (declaration
        identifier: (identifier)
        connection: (connection)
        identifier: (identifier)))))

====================|||
Reference parent
====================|||

christmas: {
  presents
}
birthdays: {
  presents
  _.christmas.presents -> presents: regift
  _.christmas.style.fill: "#ACE1AF"
}

---|||

(source_file
  (declaration
    identifier: (identifier)
    block: (block
      (declaration
        identifier: (identifier))))
  (declaration
    identifier: (identifier)
    block: (block
      (declaration
        identifier: (identifier))
      (declaration
        identifier: (identifier
          field: (identifier)
          field: (identifier))
        connection: (connection)
        identifier: (identifier)
        label: (label))
      (declaration
        identifier: (identifier
          field: (identifier)
          field: (identifier)
          field: (identifier))
        label: (label)))))
