test/corpus/docs/imports/syntax.txt
====================|||
Regular import
====================|||

a: @x.d2
a -> b

---|||

(source_file
  (declaration
    (identifier)
    (import))
  (declaration
    (identifier)
    (connection)
    (identifier)))

====================|||
Spread import
====================|||

a: {
  ...@x.d2
}
a -> b

---|||

(source_file
  (declaration
    (identifier)
    (block
      (import)))
  (declaration
    (identifier)
    (connection)
    (identifier)))


====================|||
Extension omit
====================|||

x: @x.d2
x: @x

---|||

(source_file
  (declaration
    (identifier)
    (import))
  (declaration
    (identifier)
    (import)))


====================|||
Top level + Partial imports
====================|||

...@people.management
joe -> donuts: loves
jan -> donuts: brings

---|||

(source_file
  (import)
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label))
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label)))


====================|||
Relative imports
====================|||

y: @../y.d2

---|||

(source_file
  (declaration
    (identifier)
    (import)))
