test/corpus/docs/imports/usecases/more-examples/version-visualization.txt
====================|||
History: history.d2
====================|||

direction: right
Users 1: Users Table (v0.1) {
  ...@"users-v0.1"
}

Users 2: Users Table (current) {
  ...@users-current
}

Users 1 -> Users 2

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label)
    (block
      (import)))
  (declaration
    (identifier)
    (label)
    (block
      (import)))
  (declaration
    (identifier)
    (connection)
    (identifier)))

====================|||
History: users.d2 v2
====================|||

users: {
  shape: sql_table
  id: int {constraint: primary_key}
  email: int {constraint: foreign_key}
  name: string
  password: text
  created_at: timestamp
  last_updated: timestamp
}

emails: {
  shape: sql_table
  id: int {constraint: [primary_key; unique]}
  local: string
  domain: string
  verified: boolean
}
users.email -> emails.id

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (label))))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (label))))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (label
              (label_constraint)
              (label_constraint)))))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier_chain
      (identifier)
      (identifier))
    (connection)
    (identifier_chain
      (identifier)
      (identifier))))

====================|||
History: users.d2 v1
====================|||

users: {
  shape: sql_table
  id: int {constraint: primary_key}
  email: string
  name: string
  verified_email: boolean
  password: string
  created_at: timestamp
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (label))))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label)))))

====================|||
Compare
====================|||

Team Alpha: {
  Quick facts: |md
    - 3 L6 engineers
  |
  Schema: {
    ...@alpha-schema
  }
  API: {
    ...@alpha-api
  }
  # etc etc
}

Team Charlie: {
  Quick facts: |md
    - 2 L5
    - 5 L4
    - 15 L3
  |
  Schema: {
    ...@charlie-schema
  }
  API: {
    ...@charlie-api
  }
  # etc etc
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (label_codeblock
            (codeblock_language)
            (codeblock_content))))
      (declaration
        (identifier)
        (block
          (import)))
      (declaration
        (identifier)
        (block
          (import)))
      (comment)))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (label_codeblock
            (codeblock_language)
            (codeblock_content))))
      (declaration
        (identifier)
        (block
          (import)))
      (declaration
        (identifier)
        (block
          (import)))
      (comment))))
