test/corpus/docs/in-depth/comments.txt
====================|||
Line comments
====================|||

# Comments start with a hash character and continue until the next newline or EOF.
x -> y

---|||

(source_file
  (comment)
  (declaration
    (identifier)
    (connection)
    (identifier)))

====================|||
End of line
====================|||

x -> y # I am at the end

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (comment))

====================|||
Block Comments
====================|||

x -> y

"""
This is a
block comment
"""

y -> z

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (block_comment)
  (declaration
    (identifier)
    (connection)
    (identifier)))
