test/corpus/docs/special_objects/icons-and-images.txt
====================|||
Icons
====================|||

my network: {
  icon: https://icons.terrastruct.com/infra/019-network.svg
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label)))))

====================|||
Big Example
====================|||

vpc: VPC 1 10.1.0.0./16 {
  icon: https://icons.terrastruct.com/aws%2F_Group%20Icons%2FVirtual-private-cloud-VPC_light-bg.svg
  style: {
    stroke: green
    font-color: green
    fill: white
  }
  az: Availability Zone A {
    style: {
      stroke: blue
      font-color: blue
      stroke-dash: 3
      fill: white
    }
    firewall: Firewall Subnet A {
      icon: https://icons.terrastruct.com/aws%2FNetworking%20&%20Content%20Delivery%2FAmazon-Route-53_Hosted-Zone_light-bg.svg
      style: {
        stroke: purple
        font-color: purple
        fill: "#e1d5e7"
      }
      ec2: EC2 Instance {
        icon: https://icons.terrastruct.com/aws%2FCompute%2F_Instance%2FAmazon-EC2_C4-Instance_light-bg.svg
      }
    }
  }
}

---|||

(source_file
  (declaration
    (identifier)
    (label)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label
                  (integer)))
              (declaration
                (identifier)
                (label))))
          (declaration
            (identifier)
            (label)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (block
                  (declaration
                    (identifier)
                    (label))
                  (declaration
                    (identifier)
                    (label))
                  (declaration
                    (identifier)
                    (label))))
              (declaration
                (identifier)
                (label)
                (block
                  (declaration
                    (identifier)
                    (label)))))))))))

====================|||
Add shape: image for standalone icon shapes
====================|||

direction: right
server: {
  shape: image
  icon: https://icons.terrastruct.com/tech/022-server.svg
}

github: {
  shape: image
  icon: https://icons.terrastruct.com/dev/github.svg
}

server -> github

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (connection)
    (identifier)))
